--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
 			<button id="start">Start</button>
 		</div>
 	</div>
-	<script src="js/script.js"></script>
+	<script src="script.js"></script>
 </body>
 </html>
