--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Rock, paper, scissors</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 	<h1>Rock, paper, scissors</h1>
@@ -10,11 +10,11 @@
 		<div id="play">
 			<div class="players">
 				<div class="playerPoints"><b>Users points:</b><span id="userPoints">0</span></div>
-				<img src="img/rock.png" alt="rock" id="userChoice">	
+				<img src="rock.png" alt="rock" id="userChoice">	
 			</div>
 			<div class="players">
 				<div class="playerPoints"><b>CPU points:</b><span id="cpuPoints">0</span></div>
-				<img src="img/rock.png" alt="rock" class="transformed" id="cpuChoice">	
+				<img src="rock.png" alt="rock" class="transformed" id="cpuChoice">	
 			</div>
 		</div>
 		<div id="startButton">
