--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Rock, paper, scissors</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="/style.css">
 </head>
 <body>
 	<h1>Rock, paper, scissors</h1>
@@ -21,6 +21,6 @@
 			<button id="start">Start</button>
 		</div>
 	</div>
-	<script src="script.js"></script>
+	<script src="/script.js"></script>
 </body>
 </html>
